<resources>
    <string name="app_name">MotionLogger</string>
    <string name="enter_url">Enter url</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to enable longitude and latitude.</string>
    <string name="settings">Settings</string>
    <string name="motion_sensor_image">motion sensor image</string>
    <string name="accelerometer_z_axis">Accelerometer z-axis:</string>
    <string name="gyroscope_angle_z">"Gyroscope angle-z:"</string>
    <string name="accelerometer_y_axis">Accelerometer y-axis:</string>
    <string name="gyroscope_angle_y">Gyroscope angle-y:</string>
    <string name="accelerometer_x_axis">Accelerometer x-axis:</string>
    <string name="gyroscope_angle_x">Gyroscope angle-x:</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="fetching_location">Fetching Location</string>
    <string name="app_name_company">Motion Logger (R.A.I.N)</string>
</resources>