<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:title="@string/app_name"
                app:titleTextColor="@color/white" />
        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/motionSensorImage"
            android:layout_width="410dp"
            android:layout_height="238dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            app:srcCompat="@drawable/sensor_image"
            android:contentDescription="@string/motion_sensor_image" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/layout_height"
            android:layout_marginStart="@dimen/margin_medium"
            android:hint="@string/enter_url"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:inputType="textUri"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/editText"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/gyroscope_x"
            style="@style/textProperties"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gyroscope_angle_x"
            app:layout_constraintBaseline_toBaselineOf="@id/accelerometer_x"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/gyroscope_x_text"
            style="@style/textProperties"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/gyroscope_x"
            app:layout_constraintTop_toBottomOf="@id/editText" />

        <TextView
            android:id="@+id/accelerometer_x"
            style="@style/textProperties"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accelerometer_x_axis"
            app:layout_constraintEnd_toStartOf="@id/accelerometer_x_text"
            app:layout_constraintTop_toBottomOf="@id/editText" />

        <TextView
            android:id="@+id/accelerometer_x_text"
            style="@style/textProperties"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText" />

        <TextView
            android:id="@+id/gyroscope_y"
            style="@style/textProperties"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gyroscope_angle_y"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gyroscope_x" />

        <TextView
            android:id="@+id/gyroscope_y_text"
            style="@style/textProperties"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/gyroscope_y"
            app:layout_constraintTop_toBottomOf="@id/gyroscope_x_text" />

        <TextView
            android:id="@+id/accelerometer_y"
            style="@style/textProperties"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accelerometer_y_axis"
            app:layout_constraintEnd_toStartOf="@id/accelerometer_y_text"
            app:layout_constraintTop_toBottomOf="@id/accelerometer_x" />

        <TextView
            android:id="@+id/accelerometer_y_text"
            style="@style/textProperties"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/accelerometer_x" />

        <TextView
            android:id="@+id/gyroscope_z"
            style="@style/textProperties"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gyroscope_angle_z"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gyroscope_y" />

        <TextView
            android:id="@+id/gyroscope_z_text"
            style="@style/textProperties"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/gyroscope_z"
            app:layout_constraintTop_toBottomOf="@id/gyroscope_y_text" />

        <TextView
            android:id="@+id/accelerometer_z"
            style="@style/textProperties"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accelerometer_z_axis"
            app:layout_constraintEnd_toStartOf="@id/accelerometer_z_axis"
            app:layout_constraintTop_toBottomOf="@id/accelerometer_y" />

        <TextView
            android:id="@+id/accelerometer_z_axis"
            style="@style/textProperties"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/accelerometer_y_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>